--- a/moon/css/pg-style.css
+++ b/moon/css/pg-style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
-section, section * {
+section,
+section * {
   box-sizing: border-box;
 }
 
@@ -44,6 +45,7 @@ section, section * {
   right: 200px;
   bottom: 300px;
 }
+
 .smiling-emoji {
   background: url("../asset/smiling.png") center/cover;
   width: 280px;
@@ -52,9 +54,17 @@ section, section * {
 }
 
 @keyframes floating {
-	0% { transform: translateY(0px); }
-	50% { transform: translateY(-40px); }
-	100% { transform: translateY(0px); }
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(-40px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 
@@ -100,7 +110,7 @@ section, section * {
 .contest-winner .title p {
   color: var(--Wcolor);
   text-align: center;
-  font: 300 30px/1 "Assistant", sans-serif;
+  font: 300 30px/100% "Assistant", sans-serif;
   text-transform: uppercase;
 }
 
@@ -112,7 +122,8 @@ section, section * {
   padding: 0px 200px;
   height: 1080px;
 }
-.contest-winner .video-wrap{
+
+.contest-winner .video-wrap {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -123,6 +134,7 @@ section, section * {
   position: relative;
   z-index: 0;
 }
+
 .contest-winner .video-wrap iframe {
   border-radius: 20px;
   width: 513px;
@@ -186,7 +198,7 @@ section, section * {
   align-self: stretch;
 }
 
-.contest-winner .gold {
+.contest-winner .goldimg {
   background: url(../../moon/asset/gold.png) center/cover;
   flex-shrink: 0;
   width: 119.79px;
@@ -197,7 +209,7 @@ section, section * {
   aspect-ratio: 119.79/141.05;
 }
 
-.contest-winner .silver {
+.contest-winner .silverimg {
   background: url(../../moon/asset/silver.png) center/cover;
   width: 119.79px;
   height: 141.05px;
@@ -207,7 +219,7 @@ section, section * {
   aspect-ratio: 119.79/141.05;
 }
 
-.contest-winner .popular {
+.contest-winner .popularimg {
   background: url(../../moon/asset/popular.png) center/cover;
   width: 119.79px;
   height: 169.79px;
@@ -363,14 +375,14 @@ section, section * {
   overflow: hidden;
   color: #f3f3f3;
   text-align: center;
-  font: 700 72px/1 "Assistant", sans-serif;
+  font: 700 72px/100% "Assistant", sans-serif;
   letter-spacing: -0.01em;
 }
 
 .running-contest .countbox p {
   color: var(--Bcolor);
   text-align: center;
-  font: 600 18px/1 "Assistant", sans-serif;
+  font: 600 18px/100% "Assistant", sans-serif;
   margin-top: 4px;
   text-transform: uppercase;
 }
@@ -426,7 +438,7 @@ section, section * {
   padding: 6px 32px;
   color: var(--Bcolor);
   text-align: center;
-  font: 400 14px/1 "Assistant", sans-serif;
+  font: 400 14px/100% "Assistant", sans-serif;
   text-transform: uppercase;
   transition: all 0.4s ease;
   position: relative;
@@ -454,3 +466,227 @@ section, section * {
   width: 100%;
 }
 
+
+.creativeGallery {
+  background: var(--Bcolor);
+  width: 100%;
+  padding: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.creativeGallery .titlebox {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+  position: relative;
+}
+
+.creativeGallery .titlebox .title {}
+
+.creativeGallery .titlebox .title h2 {
+  color: var(--Wcolor);
+  text-align: center;
+  font: var(--font-1920-headline-56);
+  text-transform: uppercase;
+  position: relative;
+}
+
+.creativeGallery .titlebox .category {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+}
+
+.creativeGallery .titlebox .category button {
+  background: var(--subBlue2);
+  border-radius: 63px;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  color: var(--Wcolor);
+  font: 400 26px/100% "Assistant-Regular", sans-serif;
+  text-transform: uppercase;
+  border: 0;
+  cursor: pointer;
+}
+
+.creativeGallery .fanarts {
+  width: 100%;
+}
+
+.creativeGallery .fanarts .inner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 68px;
+  position: relative;
+}
+
+.creativeGallery .con {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  position: relative;
+}
+
+.creativeGallery .fanarts h4 {
+  color: var(--Wcolor);
+  text-align: left;
+  font: 600 30px/100% "Assistant-Regular", sans-serif;
+  text-transform: uppercase;
+}
+
+.creativeGallery .fanarts .swiper {
+  width: 100%;
+  overflow: visible;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  position: relative;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .swiper-slide {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.creativeGallery .fanarts .popular_img_slide ul.swiper-wrapper .swiper-slide-shadow-right {
+    background-image: linear-gradient(to left, #000, #fff0);
+    border-right: 1px solid #000;
+    border-radius: 10px;
+}
+.creativeGallery .fanarts .popular_img_slide ul.swiper-wrapper .swiper-slide-shadow-left {
+  background-image: linear-gradient(to right, #000, #fff0);
+  box-shadow: 0 0 0 1px #000;
+  border-radius: 10px;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .fan-img-wrap {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.creativeGallery .fanarts .img_popular ul.swiper-wrapper .fan-img {
+  background: url(../../moon/asset/fanimg_1_po.png) center/cover;
+  border-radius: 20px;
+  width: 823px;
+  height: 523px;
+  overflow: hidden;
+  aspect-ratio: 823/523;
+  position: relative;
+  -webkit-box-reflect: below -5px linear-gradient(transparent 85%, rgba(0, 0, 0, 0.4) 100%);
+  pointer-events: none;
+  user-select: none;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .fan-img-wrap:hover .info-overlay {
+  opacity: 1;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .fan-img-wrap {
+  position: relative;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .info-overlay {
+  width: 100%;
+  height: 100%;
+  padding: 27px 34px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  background: linear-gradient(180deg,
+      rgba(0, 0, 0, 0.8) 0%,
+      rgba(0, 0, 0, 0) 17.788460850715637%,
+      rgba(0, 0, 0, 0) 83.8942289352417%,
+      rgba(0, 0, 0, 0.8) 100%);
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .info-overlay .subtitle {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .info-overlay .subtitle li {
+  color: var(--Wcolor);
+  text-align: left;
+  font: 300 24px/130% "Assistant", sans-serif;
+  position: relative;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .info-overlay .subtitle li b {
+  font-weight: 600;
+}
+
+.creativeGallery .fanarts .swiper ul.swiper-wrapper .info-overlay .like {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  align-items: center;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  color: #ffffff;
+  text-align: left;
+  font-family: "Assistant-SemiBold", sans-serif;
+  font-size: 20px;
+  line-height: 100%;
+  font-weight: 600;
+}
+
+
+.creativeGallery .fanarts .img_new ul.swiper-wrapper .fan-img{
+  background: url(../../moon/asset/fanimg_1_po.png) center/cover;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  height: 382.87px;
+  position: relative;
+  overflow: hidden;
+  aspect-ratio: 602/382.87;
+  -webkit-box-reflect: below -5px linear-gradient(transparent 85%, rgba(0, 0, 0, 0.6) 100%);
+  pointer-events: none;
+  user-select: none;
+}
+.fanarts .img_popular .swiper-pagination{
+  position: absolute;
+  bottom: -40px;
+  right: 0;
+}
+.swiper-pagination-bullet {
+	background: rgba(245, 245, 245, 0.4);
+	transition: all 0.5s ease 0s;
+	border-radius: 8px;
+}
+
+.swiper-pagination-bullet-active {
+	background: var(--subRed1);
+	width: 30px;
+}
