--- a/back/css/MainBack_media.css
+++ b/back/css/MainBack_media.css
@@ -1,8 +1,82 @@
 @charset "UTF-8";
 
-@media screen and (max-width:1519x) {}
+@media screen and (max-width:1519px) {
+    /* ON-AIR 섹션 반응형 - 1519px */
+    .onair .inner {
+        width: 100%;
+        max-width: 1400px;
+        padding: 0 40px;
+        box-sizing: border-box;
+    }
+
+    .onair .ONcon > div img {
+        width: 380px;
+        height: 480px;
+    }
+
+    .onair .ONcon > div.active img {
+        width: 420px;
+        height: 550px;
+    }
+
+    .onair .ONcon > div .ONtxtbox {
+        max-width: 450px;
+    }
+
+    .onair .ONcon > div .ONtxtbox h3 {
+        font-size: 38px;
+    }
+
+    .onair .ONcon > div .ONtxtbox ul > li > p {
+        font-size: 28px;
+    }
+
+    .onair .ONcon > div .ONtxtbox button {
+        padding: 20px 60px;
+        font-size: 24px;
+    }
+}
 
 @media screen and (max-width:1320px) {
+    /* ON-AIR 섹션 반응형 - 1320px */
+    .onair .inner {
+        width: 100%;
+        max-width: 1200px;
+        padding: 0 60px;
+        box-sizing: border-box;
+    }
+
+    .onair .ONcon > div img {
+        width: 360px;
+        height: 450px;
+    }
+
+    .onair .ONcon > div.active img {
+        width: 400px;
+        height: 520px;
+    }
+
+    .onair .ONcon > div .ONtxtbox {
+        max-width: 420px;
+        gap: 28px;
+    }
+
+    .onair .ONcon > div .ONtxtbox h3 {
+        font-size: 34px;
+    }
+
+    .onair .ONcon > div .ONtxtbox ul > li > p {
+        font-size: 26px;
+    }
+
+    .onair .ONcon > div .ONtxtbox button {
+        padding: 18px 55px;
+        font-size: 22px;
+    }
+
+    .onair .ONcon > div .ONtxtbox ul .bar {
+        width: 120px;
+    }
     .comingsoon .inner img {
         width: 95%;
     }
@@ -55,7 +129,7 @@
     .onair .inner .top {
         width: auto;
         padding-bottom: 50px;
-        gap: 30px;
+        gap: 20px;
     }
 
     .onair .inner .top h2 {
@@ -138,9 +212,15 @@
     }
 }
 
-@media screen and (max-width:860px) {}
+@media screen and (max-width:860px) {
+    /* ON-AIR 섹션 간격 유지 */
+    .onair .inner .top {
+        gap: 20px;
+    }
+}
 
 @media screen and (max-width:746px) {
+    /* Coming Soon 섹션 */
     .comingsoon .inner {
         width: 90%;
     }
@@ -160,11 +240,22 @@
     .comingsoon .inner p {
         bottom: 24px;
     }
+
+    /* ON-AIR 섹션 간격 유지 */
+    .onair .inner .top {
+        gap: 20px;
+    }
 }
 
-@media screen and (max-width:570px) {}
+@media screen and (max-width:570px) {
+    /* ON-AIR 섹션 간격 유지 */
+    .onair .inner .top {
+        gap: 20px;
+    }
+}
 
 @media screen and (max-width:439px) {
+    /* Coming Soon 섹션 모바일 */
     .comingsoon .inner {
         width: 380px;
     }
@@ -198,5 +289,100 @@
 
     .comingsoon .inner p {
         bottom: 24px;
+    }
+
+    /* ON-AIR 섹션 모바일 반응형 */
+    .onair {
+        height: auto;
+        padding: 60px 0 80px;
+    }
+
+    .onair .inner {
+        width: 100%;
+        max-width: 380px;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+
+    .onair .inner .top {
+        width: auto;
+        padding-bottom: 40px;
+        gap: 20px;
+        text-align: center;
+    }
+
+    .onair .inner .top h2 {
+        font-size: 30px;
+    }
+
+    .onair .ONcon {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        height: auto;
+    }
+
+    /* 모바일에서는 활성 이미지만 표시 */
+    .onair .ONcon > div:not(.active) {
+        display: none;
+    }
+
+    .onair .ONcon > div.active {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .onair .ONcon > div.active img {
+        width: 320px;
+        height: 400px;
+        opacity: 1;
+        transform: none;
+        border-radius: 20px;
+    }
+
+    /* 텍스트 박스 모바일 */
+    .onair .ONcon > div.active .ONtxtbox {
+        width: 100%;
+        max-width: 320px;
+        gap: 20px;
+        text-align: center;
+        opacity: 1;
+        visibility: visible;
+        max-height: none;
+    }
+
+    .onair .ONcon > div.active .ONtxtbox h3 {
+        font-size: 24px;
+        line-height: 1.3;
+    }
+
+    .onair .ONcon > div.active .ONtxtbox ul {
+        gap: 12px;
+        justify-content: center;
+    }
+
+    .onair .ONcon > div.active .ONtxtbox ul .bar {
+        width: 80px;
+        height: 2px;
+    }
+
+    .onair .ONcon > div.active .ONtxtbox ul > li > p {
+        font-size: 18px;
+    }
+
+    .onair .ONcon > div.active .ONtxtbox button {
+        padding: 16px 40px;
+        font-size: 18px;
+        gap: 8px;
+        border-radius: 25px;
+    }
+
+    .onair .ONcon > div.active .ONtxtbox button img {
+        width: 18px;
+        height: 18px;
     }
 }
