수정했습니다10.23.3.14

--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -105,6 +105,9 @@ main {
   perspective: 100svh;
   width: 100%;
 }
+.zoom_item img{
+  border-radius: 18px;
+}
 
 .zoom_item {
   position: absolute;
