--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 :root {
-  --color-black: #0D031C;
+  --color-black:#0D031C;
   --color-white: hsla(0, 0%, 100%, 100%);
   --color-purple: hsla(278, 100%, 75%, 100%);
 }
@@ -46,14 +46,11 @@ main {
   width: 100%;
   overflow-x: hidden;
   padding-top: 100px;
-  background: linear-gradient(90deg, var(--color-black) 0%, #2e0e5f 50%, #bc90ff 100%);
-  opacity: 0.2;
 }
 
 .text_reveal_section {
   min-height: 100vh;
-  background-color: #ffffff;
-  /* lf you're  */
+  background-color: #ffffff; /* lf you're  */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -66,9 +63,9 @@ main {
   width: 60%;
   line-height: 1.5;
   color: rgba(240, 187, 119, 0.2);
-  /*   background: linear-gradient(to right,
+  background: linear-gradient(to right,
       #fff,
-      #000 no-repeat); */
+      #000 no-repeat);
   -webkit-background-clip: text;
   background-clip: text;
   background-size: 0%;
@@ -108,8 +105,7 @@ main {
   perspective: 100svh;
   width: 100%;
 }
-
-.zoom_item img {
+.zoom_item img{
   border-radius: 18px;
 }
 
@@ -241,7 +237,7 @@ main {
   margin: 0;
   right: 80px;
 }
-
+ 
 
 
 .sw_img {
@@ -273,8 +269,7 @@ main {
   font-size: 24px;
   text-align: center;
   color: #ffffff;
-  margin-bottom: 40px;
-  /* 제목과 이미지 사이 여백 */
+  margin-bottom: 40px; /* 제목과 이미지 사이 여백 */
 }
 
 section h2 {
@@ -303,8 +298,7 @@ section h2 {
 .button-group {
   display: flex;
   flex-wrap: nowrap;
-  gap: 20px;
-  /* 버튼 간 간격 */
+  gap: 20px; /* 버튼 간 간격 */
   margin-left: 210px;
   margin-bottom: 40px;
 }
@@ -330,38 +324,27 @@ section h2 {
 
 
 .Filter {
-  margin-left: auto;
-  /* 오른쪽 끝 배치 */
-  margin-right: 200px;
-  /* 오른쪽 끝에서 안쪽간격 */
-  padding: 8px 30px;
-  /* 위아래 8px, 좌우 40px */
+  margin-left: auto; /* 오른쪽 끝 배치 */
+  margin-right: 200px; /* 오른쪽 끝에서 안쪽간격 */
+  padding: 8px 30px; /* 위아래 8px, 좌우 40px */
   font-size: 24px;
-  font-weight: 500;
-  /* 폰트굵기 */
+  font-weight: 500; /* 폰트굵기 */
   color: #ffffff;
   background: linear-gradient(150deg, #ffffff, #ffffff);
   border-radius: 18px;
-  cursor: pointer;
-  /* 마우스 올려놨을 때 손가락버튼바낌 */
+  cursor: pointer; /* 마우스 올려놨을 때 손가락버튼바낌 */
   transition: all 0.5s ease;
   text-align: center;
   border: 1px solid #ccc;
-  background: transparent;
-  /* 배경 투명 */
-  appearance: none;
-  /* 브라우저 기본 화살표 제거 */
+  background: transparent; /* 배경 투명 */
+  appearance: none; /* 브라우저 기본 화살표 제거 */
 }
 
-.Filter::after {
-  right: 50px;
-}
+.Filter::after{ right: 50px; }
 
 .Filter option {
-  color: #ffffff;
-  /* 옵션 텍스트 색 */
-  background: rgb(0, 0, 0);
-  /* 옵션 배경 */
+  color: #ffffff; /* 옵션 텍스트 색 */
+  background: rgb(0, 0, 0); /* 옵션 배경 */
 }
 
 
@@ -376,10 +359,8 @@ ul.poster-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  row-gap: 50px;
-  /* 5개 박스 사이 자동 간격 */
-  margin: 0 200px;
-  /* 양쪽 200px 여백 */
+  row-gap: 50px; /* 5개 박스 사이 자동 간격 */
+  margin: 0 200px; /* 양쪽 200px 여백 */
   /* 한 줄로 유지 */
 }
 
@@ -395,8 +376,7 @@ ul.poster-list li {
   color: #948484;
   font-weight: 500;
   font-size: 25px;
-  margin-top: 20px;
-  /* 위쪽 간격 */
+  margin-top: 20px; /* 위쪽 간격 */
   /*   text-align: center; */
   line-height: 1.5;
 }
@@ -405,23 +385,8 @@ ul.poster-list li {
   width: 268px;
   height: 390px;
   border-radius: 5px;
-  filter: brightness(0.9);
-  /* 이미지어둡게 조절 */
+  filter: brightness(0.9); /* 이미지어둡게 조절 */
   cursor: pointer;
-}
-
-
-.poster-list li img {
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.poster-list li:hover img {
-  transform: scale(1.05);
-  /* 5% 확대 */
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
-  /* 그림자 추가 */
-  border-radius: 8px;
-  /* 약간 둥글게 */
 }
 
 /* Pagination + Search Container */
@@ -528,31 +493,25 @@ ul.poster-list li {
 }
 
 section h2 {
-  margin-top: 150px;
-  /* 기존 200px → 50px으로 줄임 */
-  margin-bottom: 30px;
-  /* 섹션 내 제목과 콘텐츠 간격 */
+  margin-top: 150px; /* 기존 200px → 50px으로 줄임 */
+  margin-bottom: 30px; /* 섹션 내 제목과 콘텐츠 간격 */
 }
 
 
 .last-section {
   width: 100%;
-  height: 120vh;
-  /* outo; 150vh 온에어랑 큰포스터 둘의 간격*/
+  height: 120vh; /* outo; 150vh 온에어랑 큰포스터 둘의 간격*/
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 60px;
-  /* on-air와의 간격 */
-}
+  margin-bottom: 60px; /* on-air와의 간격 */
+} 
 
 .last-section img {
   width: 100%;
   border-radius: 18px;
-  height: auto;
-  /* 비율 유지 */
-  max-height: 650px;
-  /* 최대 높이 제한 */
+  height: auto; /* 비율 유지 */
+  max-height: 650px; /* 최대 높이 제한 */
 }
 
 .last-section span {
@@ -594,7 +553,6 @@ section h2 {
   margin-top: -77px;
   margin-left: -54px;
 }
-
 .eye {
   position: relative;
   background: #FFF;
@@ -622,131 +580,108 @@ section h2 {
 }
 
 @keyframes rotate {
-
+  
   0% {
     transform: rotate(0deg);
   }
-
   50% {
     transform: rotate(0deg);
   }
-
   62.5% {
     transform: rotate(-90deg);
   }
-
   87.5% {
     transform: rotate(90deg);
   }
-
   100% {
     transform: rotate(0deg);
   }
 }
-
 @-webkit-keyframes rotate {
   0% {
     transform: rotate(0deg);
   }
-
   50% {
     transform: rotate(0deg);
   }
-
   62.5% {
     transform: rotate(-90deg);
   }
-
   87.5% {
     transform: rotate(90deg);
   }
-
   100% {
     transform: rotate(0deg);
   }
 }
 
 @keyframes eye {
-
+  
   0% {
     top: 15px;
     left: 15px;
   }
-
   12.5% {
     top: 15px;
     left: 5px;
   }
-
   25% {
     top: 15px;
     left: 15px;
   }
-
   37.5% {
     top: 15px;
     left: 25px;
   }
-
   50% {
     top: 15px;
     left: 15px;
   }
-
   62.5% {
     top: 5px;
     left: 15px;
   }
-
   87.5% {
     top: 5px;
     left: 15px;
   }
-
   100% {
     top: 15px;
     left: 15px;
   }
 }
-
 @-webkit-keyframes eye {
   0% {
     top: 15px;
     left: 15px;
   }
-
   12.5% {
     top: 15px;
     left: 5px;
   }
-
   25% {
     top: 15px;
     left: 15px;
   }
-
   37.5% {
     top: 15px;
     left: 25px;
   }
-
   50% {
     top: 15px;
     left: 15px;
   }
-
   62.5% {
     top: 5px;
     left: 15px;
   }
-
   87.5% {
     top: 5px;
     left: 15px;
   }
-
   100% {
     top: 15px;
     left: 15px;
   }
 }
+
